--- a/Coruja_GraoPara/WebContent/css/principal.css
+++ b/Coruja_GraoPara/WebContent/css/principal.css
@@ -1,10 +1,11 @@
 @charset "utf-8";
 body {
 	font: 100%/1.4 Verdana, Arial, Helvetica, sans-serif;
-	background-color: #4E5869;
+	background-color: #4E5869; 
 	margin: 0;
 	padding: 0;
 	color: #000;
+	text-align: center;
 }
 
 /* ~~ Element/tag selectors ~~ */
@@ -16,6 +17,7 @@ h1, h2, h3, h4, h5, h6, p {
 	margin-top: 0;	 /* removing the top margin gets around an issue where margins can escape from their containing div. The remaining bottom margin will hold it away from any elements that follow. */
 	padding-right: 15px;
 	padding-left: 15px; /* adding the padding to the sides of the elements within the divs, instead of the divs themselves, gets rid of any box model math. A nested div with side padding can also be used as an alternate method. */
+	text-align: center;
 }
 a img { /* this selector removes the default blue border displayed in some browsers around an image when it is surrounded by a link */
 	border: none;
@@ -41,6 +43,7 @@ a:hover, a:active, a:focus { /* this group of selectors will give a keyboard nav
 	min-width: 780px;/* a min-width may be desirable to keep this layout from getting too narrow. This keeps line length more readable in the side columns. IE6 does not respect this declaration. */
 	background-color: #FFF;
 	margin: 0 auto; /* the auto value on the sides, coupled with the width, centers the layout. It is not needed if you set the .container's width to 100%. */
+	font-size: 100%;
 }
 
 /* ~~ the header is not given a width. It will extend the full width of your layout. It contains an image placeholder that should be replaced with your own linked logo ~~ */
@@ -60,7 +63,7 @@ a:hover, a:active, a:focus { /* this group of selectors will give a keyboard nav
 
 */
 
-.input{
+.inputLogin{
 	background-color: #ffffff;
 	-webkit-border-radius: .4em;
 	-moz-border-radius: .4em;
@@ -77,6 +80,79 @@ a:hover, a:active, a:focus { /* this group of selectors will give a keyboard nav
 	margin: 0px 0;
 	color: #000;
 	padding: 0 0 0 5px;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 1em;
+	letter-spacing: 1px;
+}
+
+.input{
+	background-color: #ffffff;
+	-webkit-border-radius: 0.4em;
+	-moz-border-radius: 0.4em;
+	border-radius: 0.4em;
+	
+	border: 1;
+	width: 180px;
+	height: 20px;
+	margin: 5px 0;
+	color: #000;
+	padding: 0 0 0 10px;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 1em;
+	letter-spacing: 1px;
+}
+
+.inputPalavraChave{
+	background-color: #ffffff;
+	-webkit-border-radius: 0.4em;
+	-moz-border-radius: 0.4em;
+	border-radius: 0.4em;
+	
+	border: 1;
+	width: 100px;
+	height: 20px;
+	margin: 5px 0;
+	color: #000;
+	padding: 0 0 0 10px;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 1em;
+	letter-spacing: 1px;
+}
+
+.inputResumo{
+	background-color: #ffffff;
+	-webkit-border-radius: .4em;
+	-moz-border-radius: .4em;
+	border-radius: .4em;
+	
+	
+	
+
+	border: 1;
+	width: 400px;
+	height: 250px;
+	margin: 0px 0;
+	color: #000;
+	padding: 0 0 0 5px;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 1em;
+	letter-spacing: 1px;
+}
+
+.inputEstado{
+	background-color: #ffffff;
+	-webkit-border-radius: .4em;
+	-moz-border-radius: .4em;
+	border-radius: .4em;
+	
+	
+
+	border: 1;
+	width: 60px;
+	height: 20px;
+	margin: 0px 0;
+	color: #000;
+	padding: 0 0 0 0px;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 1em;
 	letter-spacing: 1px;
@@ -178,7 +254,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus { /* this changes the background
 .footer {
 	padding: 10px 0;
 	background-color: #6F7D94;
-	text-align:center;"/media/4C1AFBE11AFBC5CC/Angela/ProjetoCoruja/Site/ie.css"
+	text-align: center;
 	text-shadow:#000;
 	position: relative;/* this gives IE6 hasLayout to properly clear */
 	clear: both; /* this clear property forces the .container to understand where the columns end and contain them */
@@ -194,11 +270,19 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus { /* this changes the background
 	margin-right: 8px;
 }
 .clearfloat { /* this class can be placed on a <br /> or empty div as the final element following the last floated div (within the #container) if the #footer is removed or taken out of the #container */
-	clear:both;"/media/4C1AFBE11AFBC5CC/Angela/ProjetoCoruja/Site/principal.css"
+	clear:both;
 	height:0;
 	font-size: 1px;
 	line-height: 0px;
-}.loginText {
+}
+.loginText {
 	font-size: 80%;
 }
 
+.labelForms {
+	font-size: 80%;
+	text-align:left;
+}
+.tableForms{
+	text-align:left;
+}
