--- a/GraoParaMVN/GraoParaWEB/WebContent/css/principal.css
+++ b/GraoParaMVN/GraoParaWEB/WebContent/css/principal.css
@@ -5,7 +5,7 @@ body {
 	margin: 0;
 	padding: 0;
 	color: #000;
-	/*text-align: center; */
+	text-align: center;
 }
 
 /* ~~ Element/tag selectors ~~ */
