--- a/GraoPara/WebContent/pages/css/controle.css
+++ b/GraoPara/WebContent/pages/css/controle.css
@@ -30,6 +30,7 @@
 	-moz-box-shadow: 0 0px 1px rgba(255, 255, 255);
 	box-shadow: 0 0px 1px rgba(255, 255, 255);
 	color: #fff;	
+	cursor:pointer;
 }
 
 .inputControle{
