Atualização de Javacript, CSS de validação e alguns caminhos de páginas

--- a/GraoPara/WebContent/css/principal.css
+++ b/GraoPara/WebContent/css/principal.css
@@ -164,6 +164,23 @@ a:hover, a:active, a:focus { /* this group of selectors will give a keyboard nav
 	letter-spacing: 1px;
 }
 
+.inputShort{
+	background-color: #ffffff;
+	-webkit-border-radius: .4em;
+	-moz-border-radius: .4em;
+	border-radius: .4em;
+	
+	border: 1;
+	width: 70px;
+	height: 20px;
+	margin: 0px 0;
+	color: #000;
+	padding: 0 0 0 0px;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 1em;
+	letter-spacing: 1px;
+}
+
 /* Estilo do botão de entrar do painel de login, está sendo reaproveitado para vários outros botões */
 .buttonEntrar{
 	width:185px;
