Atualização do servlet do admin e css principal

--- a/GraoPara/src/main/webapp/css/principal.css
+++ b/GraoPara/src/main/webapp/css/principal.css
@@ -419,6 +419,12 @@ span.asterisco {
 	border: 0px;
 }
 
+.tablePainel{
+	text-align:center;	
+	width: 600px;
+	border: 1px;
+}
+
 /* Banner rules xD */
 
 .banner {
