--- a/GraoPara/src/main/webapp/css/principal.css
+++ b/GraoPara/src/main/webapp/css/principal.css
@@ -54,9 +54,9 @@ a:hover, a:active, a:focus { /* this group of selectors will give a keyboard nav
 
 /* Originalmente as divs tinham layout líquido (porcentagem) mas falando com o Arlindo, foi decidido deixar mais estático */
 .container {
-	width: 80%;
+	width: auto;
 	max-width: 1260px;/* a max-width may be desirable to keep this layout from getting too wide on a large monitor. This keeps line length more readable. IE6 does not respect this declaration. */
-	min-width: 780px;/* a min-width may be desirable to keep this layout from getting too narrow. This keeps line length more readable in the side columns. IE6 does not respect this declaration. */
+	min-width: 860px;/* a min-width may be desirable to keep this layout from getting too narrow. This keeps line length more readable in the side columns. IE6 does not respect this declaration. */
 	background-color: #FFF;
 	margin: 0 auto; /* the auto value on the sides, coupled with the width, centers the layout. It is not needed if you set the .container's width to 100%. */
 	font-size: 100%;
@@ -299,7 +299,7 @@ label{
 
 /* Div do conteúdo interno do site, onde as outras páginas estão sendo carregadas dentro */
 .content {
-	padding: 30px 10px 10px 10px;
+	padding: 30px 10px 10px 80px;
 	width: 725px;
 	float: left;
 	
