Correção no painel de admin

--- a/GraoPara/src/main/webapp/css/principal.css
+++ b/GraoPara/src/main/webapp/css/principal.css
@@ -254,7 +254,10 @@ a:hover, a:active, a:focus { /* this group of selectors will give a keyboard nav
 	cursor:pointer;
 	
 }
-
+.scroll{
+	height: 30em;
+	overflow: auto;
+}
 .buttonPesquisa{
 	width:185px;
 	height:24px;
