--- a/GraoPara/src/main/webapp/css/controle.css
+++ b/GraoPara/src/main/webapp/css/controle.css
@@ -7,25 +7,22 @@
 
 .tableControle{
 	text-align:left;
-	margin: 0 0 0 30%;
+	margin: 40px 0 0 30px;
 	padding: 0 20 0 20;
-	width: 500px;
+	width: 700px;
 }
+
 
 .buttonDocumento{
 	width:120px;
 	height:24px;
 	text-align:center;
-	border: none;
-
-	
+	border: none;	
 	background: #6F7D94;
-	background: -webkit-gradient(linear, left top);
-	
+	background: -webkit-gradient(linear, left top);	
 	-webkit-border-radius: .6em;
 	-moz-border-radius: .6em;
-	border-radius: .6em;
-	
+	border-radius: .6em;	
 	-webkit-box-shadow: 0 0px 1px rgba( 255, 255, 255);
 	-moz-box-shadow: 0 0px 1px rgba(255, 255, 255);
 	box-shadow: 0 0px 1px rgba(255, 255, 255);
