--- a/GraoPara/src/main/webapp/css/principal.css
+++ b/GraoPara/src/main/webapp/css/principal.css
@@ -175,8 +175,7 @@ a:hover, a:active, a:focus { /* this group of selectors will give a keyboard nav
 	background-color: #ffffff;
 	-webkit-border-radius: .4em;
 	-moz-border-radius: .4em;
-	border-radius: .4em;
-	
+	border-radius: .4em;	
 	border: 1;
 	width: 60px;
 	height: 20px;
@@ -192,10 +191,25 @@ a:hover, a:active, a:focus { /* this group of selectors will give a keyboard nav
 	background-color: #ffffff;
 	-webkit-border-radius: .4em;
 	-moz-border-radius: .4em;
-	border-radius: .4em;
-	
+	border-radius: .4em;	
 	border: 1;
 	width: 70px;
+	height: 20px;
+	margin: 0px 0;
+	color: #000;
+	padding: 0 0 0 0px;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 1em;
+	letter-spacing: 1px;
+}
+
+.inputLong{
+	background-color: #ffffff;
+	-webkit-border-radius: .4em;
+	-moz-border-radius: .4em;
+	border-radius: .4em;	
+	border: 1;
+	width: 250px;
 	height: 20px;
 	margin: 0px 0;
 	color: #000;
