--- a/GraoPara/src/main/webapp/css/principal.css
+++ b/GraoPara/src/main/webapp/css/principal.css
@@ -439,7 +439,7 @@ span.asterisco {
 .tablePainel{
 	text-align:center;	
 	width: 500px;
-	border: 1px;
+	border: 1px solid;
 }
 
 /* Banner rules xD */
