--- a/GraoPara/src/main/webapp/css/styleValidation.css
+++ b/GraoPara/src/main/webapp/css/styleValidation.css
@@ -114,6 +114,7 @@ table.tabbedtable label { text-align: right; padding-right: 9px; }
 
 #signupform .field {
   padding-bottom: 10px;
+  width: 120px;
   white-space: nowrap;
 }
 
@@ -121,11 +122,17 @@ table.tabbedtable label { text-align: right; padding-right: 9px; }
   padding-top: 2px;
   padding-left: 8px;
   vertical-align: top;
-  width: 246px;
   font-size: 11px;
   white-space: nowrap;
 }
 
+#signupform .status {
+  padding-top: 2px;
+  padding-left: 8px;
+  vertical-align: top;
+  font-size: 11px;
+  white-space: nowrap;
+}
 #signupform .textfield {
   width: 150px;
 }
