--- a/GraoPara/src/main/webapp/css/styleValidation.css
+++ b/GraoPara/src/main/webapp/css/styleValidation.css
@@ -114,6 +114,7 @@ table.tabbedtable label { text-align: right; padding-right: 9px; }
 
 #signupform .field {
   padding-bottom: 10px;
+  padding-left:50px;
   width: 120px;
   white-space: nowrap;
 }
