--- a/GraoPara/src/main/webapp/css/controle.css
+++ b/GraoPara/src/main/webapp/css/controle.css
@@ -9,7 +9,11 @@
 	text-align:left;
 	margin: 40px 0 0 0px;
 	padding: 0 20 0 20;
-	width: 700px;
+	width: 550px;
+}
+
+.tdControle{
+	width: 130px;
 }
 
 
