--- a/GraoPara/src/main/webapp/css/principal.css
+++ b/GraoPara/src/main/webapp/css/principal.css
@@ -268,6 +268,10 @@ margin-right: 60px;
 margin-left: 0px;
 }
 
+.buttonSair {
+margin-right: 60px;
+}
+
 .buttonLimpar {
 margin-right: 10px;
 margin-left: 0px;
