--- a/GraoPara/src/main/webapp/css/principal.css
+++ b/GraoPara/src/main/webapp/css/principal.css
@@ -245,7 +245,7 @@ a:hover, a:active, a:focus { /* this group of selectors will give a keyboard nav
 }
 
 /* Estilo do botão de entrar do painel de login, está sendo reaproveitado para vários outros botões */
-.buttonEntrar, .buttonRegistrar, .buttonCancelar, .buttonLimpar  {
+.buttonEntrar, .buttonRegistrar, .buttonCancelar, .buttonLimpar, .buttonSair  {
 	width: 140px;
 	height: 24px;
 	margin-left: 10px;
@@ -269,7 +269,8 @@ margin-left: 0px;
 }
 
 .buttonSair {
-margin-right: 60px;
+margin-left: 30px;
+width: 100px;
 }
 
 .buttonLimpar {
@@ -336,7 +337,7 @@ label{
 .sidebar1 {
 	float: left;
 	width: 180px;
-	height: 920px;
+	height: 940px;
 	background-color: #93A5C4;
 	padding-bottom: 10px;
 }
