--- a/GraoPara/src/main/webapp/css/tabs.css
+++ b/GraoPara/src/main/webapp/css/tabs.css
@@ -60,9 +60,9 @@ h2{
 	border-top-right-radius: 4px;
 	border-bottom-right-radius: 0px;
 	border-bottom-left-radius: 0px; 
-	background: #C9C9C9; /* old browsers */
-	background: -moz-linear-gradient(top, #0C91EC 0%, #257AB6 100%); /* firefox */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#0C91EC), color-stop(100%,#257AB6)); /* webkit */
+	background: #FFF; /* old browsers */
+	background: -moz-linear-gradient(top, #FFFFFF 0%, #F3F3F3 10%, #F3F3F3 50%, #FFFFFF 100%); /* firefox */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FFFFFF), color-stop(10%,#F3F3F3), color-stop(50%,#F3F3F3), color-stop(100%,#FFFFFF)); /* webkit */
 }
 
 .tabs > ul > li:hover{
@@ -138,7 +138,7 @@ article.tabsCSS section h2
     padding: 0;  
     margin: 0;  
     color: #fff;  
-    background-color: #6F7D94;  
+    background-color: #95B2F0;  
     border-radius: 5px 5px 0 0;  
 }
 /*article.tabsCSS section:nth-child(1) h2  
